--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ dist/
 .idea
 
 build/
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
