--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,css,md}'",
     "check:lint": "eslint 'src/**/*.{ts,tsx}'",
     "check:format": "prettier --check 'src/**/*.{ts,tsx,css,md}'",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -26,24 +31,33 @@
   "devDependencies": {
     "@rsbuild/core": "^1.5.6",
     "@rsbuild/plugin-react": "^1.4.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/pdfmake": "^0.2.12",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "@vitest/coverage-v8": "^4.0.14",
+    "@vitest/ui": "^4.0.14",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
-    "eslint_d": "^14.3.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint_d": "^14.3.0",
+    "happy-dom": "^20.0.11",
+    "jsdom": "^27.2.0",
+    "msw": "^2.12.3",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^4.0.14"
   }
 }
